[package]
name = "protobuf-examples"
version = "0.0.0"
authors = ["Jeff Garzik <jeff@bloq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# protobuf = { path = "../protobuf" }
protobuf="2.22.0"

[build-dependencies]
protobuf-codegen-pure = "2.22.0"
protoc-rust = "2.22.0"

# protobuf-codegen-pure = { path = "../protobuf-codegen-pure" }
# protoc-rust = { path = "../protoc-rust" }
