[package]
name = "httpie"
version = "0.1.0"
authors = ["罗杰 <13369189710@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
# clap = "3.0.0-beta.4"
clap = "3.0.0-beta.4"
colored = "2"
jsonxf = "1.1"
mime = "0.3"
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}