[package]
name = "kv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = "0.9.0"

[build-dependencies]
prost-build = { path = "../../../../prost-build-0.9.0" }
# prost-build = "0.9.0"
